--- a/WebApp.Strategy/appsettings.json
+++ b/WebApp.Strategy/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=omerunal;Initial Catalog=TestDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlServer": "Data Source=omerunal;Initial Catalog=TestDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "MongoDb": "mongodb+srv://ounal:Omer40@cluster0.2vak7wg.mongodb.net/?retryWrites=true&w=majority"
   },
   "Logging": {
     "LogLevel": {
